feat: enhance template parsing and validation with tests and error handling improvements
- Add unit tests for `TemplateError` variants and `Template` trait minimal implementation
- Introduce compile-time validation for placeholders in the derive macro
- Replace placeholder parsing with imperative parser for better error reporting
- Update documentation comments with examples and usage details
- Add compile-fail tests using `trybuild` per testing policy
- Refactor and streamline `templatia-derive` generator logic
- Include missing dependencies in `Cargo.lock` and `Cargo.toml`

--- a/templatia-derive/Cargo.toml
+++ b/templatia-derive/Cargo.toml
@@ -16,3 +16,7 @@ darling = "0.21"
 
 # Parser
 chumsky = "0.11"
+
+[dev-dependencies]
+trybuild = "1.0"
+templatia = { path = "../templatia", features = ["derive"] }
