feat: enhance `templatia` parsing, error handling, and testing support
- Add `chumsky` as an optional feature for flexible parsing
- Improve `templatia-derive` macros to handle duplicate placeholders with conflict detection
- Extend `TemplateError` with `InconsistentValues` and enhanced parsing diagnostics
- Update `templatia-derive` to validate template placeholders and enforce stricter parsing rules
- Add comprehensive tests for `Template` trait, covering parsing, invalid input, and duplicates
- Include illustrative documentation examples and usage notes
- Adjust Cargo organization for workspace alignment

--- a/templatia-derive/Cargo.toml
+++ b/templatia-derive/Cargo.toml
@@ -14,5 +14,5 @@ quote = "1.0"
 proc-macro2 = "1.0"
 darling = "0.21"
 
-# Parser
-chumsky = "0.11"
+[dev-dependencies]
+templatia = { path = "../templatia", version = "0.0.1", features = ["derive"] }
