--- a/templatia/Cargo.toml
+++ b/templatia/Cargo.toml
@@ -13,6 +13,7 @@ rust-version = "1.85.0"
 thiserror = "2"
 
 templatia-derive = { path = "../templatia-derive", version = "0.0.1", optional = true }
+chumsky = { version = "0.11", optional = true }
 
 [features]
-derive = ["templatia-derive"]
+derive = ["templatia-derive", "chumsky"]
