chore: add `readme` field to Cargo.toml files for workspace alignment

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ resolver = "3"
 version = "0.0.1"
 authors = ["SHIMA0111<shima@little-tabby.com>"]
 license = "MIT or Apache-2.0"
+readme = "README.md"
