--- a/templatia-derive/Cargo.toml
+++ b/templatia-derive/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "templatia-derive"
+description = "A proc_macro for templatia derive"
 version = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
 edition = "2024"
 readme = { workspace = true }
+repository = { workspace = true }
+homepage =  { workspace = true }
+documentation = { workspace = true }
 
 [lib]
 proc-macro = true
@@ -16,4 +20,4 @@ proc-macro2 = "1.0"
 darling = "0.21"
 
 [dev-dependencies]
-templatia = { path = "../templatia", version = "0.0.1", features = ["derive"] }
+templatia = { path = "../templatia", features = ["derive"] }
