--- a/templatia/Cargo.toml
+++ b/templatia/Cargo.toml
@@ -9,6 +9,9 @@ categories = ["parsing", "template-engine"]
 edition = "2024"
 rust-version = "1.85.0"
 readme = { workspace = true }
+repository = { workspace = true }
+homepage =  { workspace = true }
+documentation = { workspace = true }
 
 [dependencies]
 thiserror = "2"
