chore: remove unused version field from dev-dependency in Cargo.toml

--- a/templatia-derive/Cargo.toml
+++ b/templatia-derive/Cargo.toml
@@ -20,4 +20,4 @@ proc-macro2 = "1.0"
 darling = "0.21"
 
 [dev-dependencies]
-templatia = { version = "0.0.1", path = "../templatia", features = ["derive"] }
+templatia = { path = "../templatia", features = ["derive"] }
