refactor: enhance error handling and introduce placeholder escaping in `templatia-derive`
- Add `escaped_colon_marker` for improved handling of colon characters in placeholder and value parsing
- Refactor error messages to include escaped markers, enhancing error clarity and consistency
- Extend error types and adjust logic in `generate_extract_as_str_parser` for escaped placeholders
- Update tests to validate new structured error arguments and escaped placeholders

--- a/templatia-derive/Cargo.toml
+++ b/templatia-derive/Cargo.toml
@@ -18,6 +18,7 @@ syn = { version = "2", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 darling = "0.21"
+uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 templatia = { path = "../templatia", features = ["derive"] }
