chore: update CI workflow and improve documentation formatting
- Add condition to skip workflows (`fmt`, `tests`, `doc`) for non-feature branches
- Standardize parameter and error formatting in `templatia` documentation for consistency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
   fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
+    if: github.base_ref != 'develop'
     steps:
       - uses: actions/checkout@v4
 
@@ -62,6 +63,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
+    if: github.base_ref != 'develop'
     steps:
       - uses: actions/checkout@v4
 
@@ -94,6 +96,7 @@ jobs:
   doc:
     name: Documentation
     runs-on: ubuntu-latest
+    if: github.base_ref != 'develop'
     steps:
       - uses: actions/checkout@v4
 
