chore: enable auto-review in CodeRabbit configuration
- Activate `auto_review` feature for all base branches in `.coderabbit.yaml`

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -5,3 +5,8 @@ reviews:
   request_changes_workflow: true
   # related_prs sometimes displays PRs that have a low-related PR
   related_prs: false
+  auto_review:
+    enabled: true
+    # All PRs should be automatically reviewed
+    base_branches:
+      - ".*"
