--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [check-permissions, awaits-approval]
-    if: always() && (needs.awaits-approval.result == 'success')
+    if: needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success'
     permissions:
       contents: write
 
@@ -71,6 +71,16 @@ jobs:
         with:
           # Fetch all history for all tags and branches
           fetch-depth: 0
+
+      - name: Verify Git branch
+        run: |
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          if [ "$CURRENT_BRANCH" != "main" ]; then
+            echo "❌ ERROR: This workflow can only be run from the main branch"
+            echo "Current branch: $CURRENT_BRANCH"
+            exit 1
+          fi
+          echo "✅ Running on main branch"
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@1.90.0
