--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [check-permissions, awaits-approval]
-    if: needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success'
+    if: needs.check-permissions.outputs.is_code_owner == true || needs.awaits-approval.result == 'success'
     permissions:
       contents: write
 
