--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [check-permissions, awaits-approval]
-    if: needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success'
+    # always() is needed because the awaits-approval job is not always run. If it is not run, this job will be skipped.
+    if: always() && (needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success')
     permissions:
       contents: write
 
