--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ on:
 
 jobs:
   check-permissions:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     outputs:
       is_code_owner: ${{ steps.check-permissions.outputs.is_code_owner }}
@@ -50,6 +52,7 @@ jobs:
             }
 
   awaits-approval:
+    permissions: {}
     runs-on: ubuntu-latest
     needs: check-permissions
     if: ${{ needs.check-permissions.outputs.is_code_owner == 'false' }}
