--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,7 @@ jobs:
     if: always() && (needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success')
     permissions:
       contents: write
+      actions: write
 
     steps:
       - uses: actions/checkout@v4
