--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ on:
 
 jobs:
   check-permissions:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     outputs:
       is_code_owner: ${{ steps.check-permissions.outputs.is_code_owner }}
@@ -50,6 +52,7 @@ jobs:
             }
 
   awaits-approval:
+    permissions: {}
     runs-on: ubuntu-latest
     needs: check-permissions
     if: ${{ needs.check-permissions.outputs.is_code_owner == 'false' }}
@@ -66,6 +69,7 @@ jobs:
     if: always() && (needs.check-permissions.outputs.is_code_owner == 'true' || needs.awaits-approval.result == 'success')
     permissions:
       contents: write
+      actions: write
 
     steps:
       - uses: actions/checkout@v4
